# swimmplan-smart

./: .gcloudignore  .gitignore  AGENTS.md  Dockerfile  HANDOVER.md  KAGGLE_WRITEUP.md  README.md  deploy_gcp.sh  index.html  metadata.json  nginx.conf  package-lock.json  package.json
agent_backend/: .env.example  .gcloudignore  Dockerfile  agents-cli-manifest.yaml  deploy_backend.sh  pyproject.toml
agent_backend/app/: agent.py  mcp_server.py
agent_backend/tests/eval/: eval_config.yaml
agent_backend/tests/eval/datasets/: basic-dataset.json
backup-old-project/: index.html  package-lock.json  package.json
backup-old-project/src/: App.tsx  index.css  types.ts
backup-old-project/src/components/: Block.tsx  BlockEditorModal.tsx  DraggableLibraryBlock.tsx  ExerciseLibrary.tsx  SortableTimelineBlock.tsx  TrainingTimeline.tsx
backup-old-project/src/data/: templates.ts
public/: manifest.json  sw.js
src/: App.tsx  defaultData.ts  index.css  main.tsx  types.ts
src/components/: AICoachModal.tsx  AddCustomBlockModal.tsx  CommunityModal.tsx  EditBlockModal.tsx  Header.tsx  LibraryItem.tsx  TimelineEntry.tsx
